<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ANOTHERpass</string>
    <string name="action_settings">Settings</string>
    <string name="login_pin_fragment_label">Unlock with your PIN</string>
    <string name="login_masterpassword_fragment_label">Login with your master password</string>
    <string name="add_credential">Add Credential</string>
    <string name="hint_edit_label_name">A short label name</string>
    <string name="hint_edit_label_desc">Some optional description</string>
    <string name="hint_edit_credential_name">A short credential name</string>
    <string name="hint_edit_credential_additional_info">Some optional info</string>
    <string name="button_save">Save</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_not_an_email_address">This field does not contain a valid email address.</string>
    <string name="with_upper_case">With upper case chars</string>
    <string name="with_digits">With digits</string>
    <string name="with_special_chars">With special chars</string>
    <string name="title_use_extended_special_chars">Use extended special chars</string>
    <string name="summary_use_extended_special_chars">If generation happens with special chars included, the set of possible characters is extended to characters usually accessible on the second page of keyboards like all kinds of brackets, tilde, percentage sign etc.</string>
    <string name="credential_passwd_params">Here you generate the password for this credential. It is recommend to generate it instead of creating it manually. \'Pseudo Phrase\' passwords are easier to read and type but still highly random and unpredictable.</string>
    <string name="button_gen_passwd">Generate</string>
    <string name="search">Search (!-extended)</string>
    <string name="EASY">Easy</string>
    <string name="NORMAL">Normal</string>
    <string name="STRONG">Strong</string>
    <string name="ULTRA">Ultra</string>
    <string name="EXTREME">Extreme</string>
    <string name="HYPER">Hyper</string>
    <string name="cipher_name">Encryption algorithm</string>
    <string name="create_vault_cipher_explanation">Choose an encryption algorithm. You can change that later. If in doubt, use the current default.</string>
    <string name="update_vault_cipher_explanation">Choose an encryption algorithm. Current used algorithm is %1$s</string>
    <string name="CIPHER_AES_128">AES (128bit key)</string>
    <string name="CIPHER_AES_256">AES (256bit key)</string>
    <string name="CIPHER_BLOWFISH_128">Blowfish (128bit key)</string>
    <string name="CIPHER_BLOWFISH_256">Blowfish (256bit key)</string>
    <string name="CIPHER_CHACHACHA20_256">Chacha20 (256bit key)</string>
    <string name="CIPHER_AES_128_desc">This is the standard encryption with a good balance of security and performance. Supported by all Android versions.</string>
    <string name="CIPHER_AES_256_desc">This is the standard encryption with better security but less performance. Supported by Android 8 and higher.</string>
    <string name="CIPHER_BLOWFISH_128_desc">This is an alternative encryption with a good balance of security and performance. It is supposed to be harder to crack than AES but therefore slower. Supported by Android 2.3 and higher.</string>
    <string name="CIPHER_BLOWFISH_256_desc">This is an alternative encryption with better security but less performance. It is supposed to be harder to crack than AES but therefore slower. Supported by Android 2.3 and higher.</string>
    <string name="CIPHER_CHACHACHA20_256_desc">This is another alternative encryption with around the same security like AES but supposed to be faster. Supported by Android 9 and higher.</string>
    <string name="mark">Mark</string>
    <string name="unmark">Unmark</string>
    <string name="change">Edit</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="title_delete_credential">Delete Credential</string>
    <string name="message_delete_credential">Are you sure deleting credential \'%1$s\'?</string>
    <string name="title_delete_label">Delete Label</string>
    <string name="message_delete_label">Are you sure deleting label \'%1$s\'? It will be removed from all credentials where it is assigned to.</string>
    <string name="title_delete_username_template">Delete Username Template</string>
    <string name="message_delete_username_template">Are you sure deleting username template \'%1$s\'? It wont be visible anymore in the username suggestions.</string>
    <string name="title_delete_web_extension">Unlink device</string>
    <string name="message_delete_web_extension">Do you really want to unlink the linked device \'%1$s\' by deleting it?</string>
    <string name="lock_items">Lock vault</string>
    <string name="logout">Logout and exit</string>
    <string name="login_help">Help</string>
    <string name="button_create_new_vault">Create vault</string>
    <string name="text_create_new_vault">Welcome! If you are new on ANOTHERpass it is worth to read the online help. Or just start by creating a new vault.</string>
    <string name="button_import_new_vault">Import vault</string>
    <string name="text_import_new_vault">Import an existing vault, if you already have a vault file exported from another ANOTHERpass app.</string>
    <string name="create_vault_explanation_1">First you have to generate the master password. This is used to login into your vault. You don\'t need to remember it! Later you will have the chance to export it.</string>
    <string name="button_next">Next</string>
    <string name="store_master_password">Store master password on device</string>
    <string name="delete_stored_masterpasswd">Remove stored master password</string>
    <string name="revoke_quick_access">Revoke quick access</string>
    <string name="detach">Detach</string>
    <string name="action_export">Export</string>
    <string name="import_read">Import / Read</string>
    <string name="export_masterkey">Export master key</string>
    <string name="export_masterpasswd">Export master password</string>
    <string name="export_vault">Export vault</string>
    <string name="import_vault_as_file">Import vault file</string>
    <string name="export_plain_credentials">Takeout credentials</string>
    <string name="drop_vault">Drop vault (delete all)</string>
    <string name="quick_access">Quick access</string>
    <string name="generate_new_mpt">Create Master Password Token</string>
    <string name="revoke_last_mpt">Invalidate Master Password Token</string>
    <string name="help">Online help</string>
    <string name="about">About</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_master_password">Change master password</string>
    <string name="change_encryption">Change encryption</string>
    <string name="vault">Vault</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_security">Security</string>
    <string name="lock_timeout_title">Lock vault after inactivity</string>
    <string name="logout_timeout_title">Logout after inactivity</string>
    <string name="pref_header_login">Login</string>
    <string name="pref_header_passwd">Password generator</string>
    <string name="copy_password_to_clipboard">Copy password to clipboard</string>
    <string name="pref_header_autofill">Auto fill support</string>
    <string name="action_labels">Manage labels</string>
    <string name="action_username_templates">Username templates</string>
    <string name="reset_vault">Reset all</string>
    <string name="debug" translatable="false">Debug info</string>
    <string name="pref_header_clipboard">Clipboard settings</string>
    <string name="restore_last_password">Restore previous password</string>
    <string name="preserve_last_password">Preserve previous password</string>
    <string name="pref_header_overlay">Password overlay dialog</string>
    <string name="password_strength">Password strength</string>
    <string name="show_vault_info">Show vault info</string>
    <string name="obfuscate_while_saving">Obfuscate password while saving</string>
    <string name="deobfuscate">De-obfuscate password</string>
    <string name="verify_test">Verify QR code / NFC tag</string>
    <string name="import_read_credential">Import / read exported credential</string>
    <string name="pref_autofill_summary_off_suggest">Suggesting Autofill only on identified user or password fields. With this option, the app could miss some fields, e.g. in web browsers.</string>
    <string name="pref_autofill_summary_on_suggest">Suggesting Autofill on every text field.</string>
    <string name="pref_autofill_exclude_apps">Exclude apps from Autofill</string>
    <string name="pref_security_mask_password">Mask password when showing a credential (can be unmasked by clicking on it)</string>
    <string name="show_export_vault_reminder">Reminder of export vault</string>
    <string name="summary_show_export_vault_reminder">Show a reminder when the vault has changed and needs to be exported.</string>
    <string name="show_export_mk_reminder">Reminder of export Encrypted Master Key</string>
    <string name="show_export_mp_reminder">Reminder of export Master Password</string>
    <string name="summary_show_export_mk_reminder">Show a reminder when the Encrypted Master Key has changed and needs to be exported.</string>
    <string name="summary_show_export_mp_reminder">Show a reminder when the Master Password needs to be exported. Note: Without the master password you cannot login!</string>
    <string name="show_biometric_smp_reminder">Reminder of setup biometrics for stored master password</string>
    <string name="summary_show_biometric_smp_reminder">Show a reminder when the stored master password is not protected by a biometric (e.g. a fingerprint) but the device would support it.</string>
    <string name="pref_header_reminder">Reminders</string>
    <string name="reminder_period_title">How often to show reminders</string>
    <string name="whats_new">What\'s new</string>
    <string name="intro">Show intro</string>
    <string name="details">Show details</string>
    <string name="autofill_suggest_everywhere">Autofill suggestion everywhere</string>
    <string name="autofill_deactivation_duration_title">On demand temporary pause Autofill</string>
    <string name="temp_deact_autofill_15_sec">For 15 seconds</string>
    <string name="temp_deact_autofill_30_sec">For 30 seconds</string>
    <string name="temp_deact_autofill_1_minute">For one minute</string>
    <string name="temp_deact_autofill_5_minutes">For 5 minutes</string>
    <string name="temp_deact_autofill_10_minutes">For 10 minutes</string>
    <string name="temp_deact_autofill_1_hour">For one hour</string>
    <string name="temp_deact_autofill_12_hours">For 12 hours</string>
    <string name="resume_paused_autofill">Resume paused Autofill</string>
    <string name="seed_random_generator">Optimize random generator</string>
    <string name="import_credentials_file">Import credentials from file</string>
    <string name="autofill_inline_presentations_title">Show Autofill options inlined of the keyboard</string>
    <string name="autofill_inline_presentations_summary">Since Android 11 Autofill options can be shown integrated in the virtual keyboard, if the keyboard supports it. If not, the common popup dialog will be shown.</string>
    <string name="autofill_suggest_credentials_title">Suggest credentials</string>
    <string name="autofill_suggest_credentials_summary">If possible, suggest credentials which could fit for the current dialog to Autofill</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="manage_linked_devices">Manage linked devices</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
</resources>