<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="none"
        android:id="@+id/group_quick_access">

        <item
            android:id="@+id/item_quick_access"
            android:title="@string/quick_access">
        </item>

        <item
            android:id="@+id/generate_masterpasswd_token"
            android:title="@string/generate_new_mpt" />
        <item
            android:id="@+id/revoke_masterpasswd_token"
            android:title="@string/revoke_last_mpt"
            android:visible="false"/>
        <item
            android:id="@+id/delete_stored_masterpasswd"
            android:title="@string/delete_stored_masterpasswd" />
        <item
            android:id="@+id/store_masterpasswd"
            android:title="@string/store_master_password" />
    </group>


    <group
        android:checkableBehavior="none"
        android:id="@+id/group_export">

        <item
            android:id="@+id/item_export"
            android:title="@string/action_export">
        </item>

        <item
            android:id="@+id/export_encrypted_masterpasswd"
            android:title="@string/export_masterpasswd" />
        <item
            android:id="@+id/export_masterkey"
            android:title="@string/export_masterkey" />
        <item
            android:id="@+id/export_vault"
            android:title="@string/export_vault" />
        <item
            android:id="@+id/export_plain_credentials"
            android:title="@string/export_plain_credentials" />
    </group>


    <group
        android:checkableBehavior="none"
        android:id="@+id/group_import">

        <item
            android:id="@+id/item_import"
            android:title="@string/import_read">
        </item>


        <item
            android:id="@+id/test_verify_qr_code_or_nfc_tag"
            android:title="@string/verify_test" />

        <item
            android:id="@+id/import_credential"
            android:title="@string/import_read_credential" />

        <item
            android:id="@+id/import_vault"
            android:title="@string/import_vault_as_file" />

        <item
            android:id="@+id/import_credentials_from_file"
            android:title="@string/import_credentials_file" />


    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/group_vault">
        <item
            android:id="@+id/item_vault"
            android:title="@string/vault">
        </item>

        <item
            android:id="@+id/show_vault_info"
            android:title="@string/show_vault_info" />

        <item
            android:id="@+id/change_pin"
            android:title="@string/change_pin" />

        <item
            android:id="@+id/change_master_password"
            android:title="@string/change_master_password" />

        <item
            android:id="@+id/change_master_key_and_encryption"
            android:title="@string/change_encryption" />

        <item
            android:id="@+id/seed_random_generator"
            android:title="@string/seed_random_generator" />

        <item
            android:id="@+id/drop_vault"
            android:title="@string/drop_vault" />

    </group>

    <group>

        <item
            android:id="@+id/menu_labels"
            android:icon="@drawable/ic_baseline_label_24"
            android:orderInCategory="100"
            android:title="@string/action_labels" />
        <item
            android:id="@+id/menu_username_templates"
            android:icon="@drawable/ic_baseline_person_24"
            android:orderInCategory="120"
            android:title="@string/action_username_templates" />

        <item
            android:id="@+id/menu_linked_devices"
            android:icon="@drawable/baseline_phonelink_24"
            android:title="@string/manage_linked_devices"
            android:orderInCategory="140"/>

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:orderInCategory="160"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:orderInCategory="200"
            android:title="@string/help">
        </item>

        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:orderInCategory="300"
            android:title="@string/about">
        </item>

        <item
            android:id="@+id/menu_report_bug"
            android:icon="@drawable/baseline_bug_report_24"
            android:orderInCategory="350"
            android:title="@string/report_a_bug">
        </item>


        <item
            android:id="@+id/menu_debug"
            android:icon="@drawable/ic_baseline_memory_24"
            android:orderInCategory="400"
            android:title="@string/debug"
            android:visible="false">
        </item>
    </group>

</menu>