<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_no_autofill_15_sec"
        android:title="@string/temp_deact_autofill_15_sec" />
    <item android:id="@+id/menu_no_autofill_30_sec"
        android:title="@string/temp_deact_autofill_30_sec" />
    <item android:id="@+id/menu_no_autofill_1_min"
        android:title="@string/temp_deact_autofill_1_minute" />
    <item android:id="@+id/menu_no_autofill_5_min"
        android:title="@string/temp_deact_autofill_5_minutes" />
    <item android:id="@+id/menu_no_autofill_10_min"
        android:title="@string/temp_deact_autofill_10_minutes" />
    <item android:id="@+id/menu_no_autofill_1_hour"
        android:title="@string/temp_deact_autofill_1_hour" />
    <item android:id="@+id/menu_no_autofill_12_hours"
        android:title="@string/temp_deact_autofill_12_hours" />


</menu>
