<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="YAPM/pref:autofill_suggest_everywhere"
        app:summaryOff="@string/pref_autofill_summary_off_suggest"
        app:summaryOn="@string/pref_autofill_summary_on_suggest"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:defaultValue="false"
        app:title="@string/autofill_suggest_everywhere" />

    <SwitchPreferenceCompat
        app:key="YAPM/pref:autofill_suggest_credentials"
        app:summary="@string/autofill_suggest_credentials_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:defaultValue="true"
        app:title="@string/autofill_suggest_credentials_title" />

    <SwitchPreferenceCompat
        app:key="YAPM/pref:autofill_inline_presentations"
        app:summary="@string/autofill_inline_presentations_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:defaultValue="true"
        app:title="@string/autofill_inline_presentations_title" />

    <MultiSelectListPreference
        app:key="YAPM/pref:autofill_exclusion_list"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:defaultValue="@array/empty_array"
        app:title="@string/pref_autofill_exclude_apps" />

    <ListPreference
        app:defaultValue="15"
        app:entries="@array/autofill_deactivation_duration_entries"
        app:entryValues="@array/autofill_deactivation_duration_values"
        app:key="YAPM/pref:autofill_deactivation_duration"
        app:title="@string/autofill_deactivation_duration_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true"/>



</PreferenceScreen>