<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/menu_lock_items"
            android:icon="@drawable/ic_lock_open_white_24dp"
            android:title="@string/lock_items"
            app:showAsAction="always" />
        <item android:id="@+id/menu_detach_credential"
            android:icon="@drawable/ic_baseline_north_east_24_white"
            app:showAsAction="always"
            android:title="@string/detach" />
        <item android:id="@+id/menu_copy_credential"
            android:icon="@drawable/ic_baseline_content_copy_24_white"
            app:showAsAction="always"
            android:title="@string/copy_password_to_clipboard" />
        <item android:id="@+id/menu_deobfuscate_password"
            android:checkable="true"
            app:showAsAction="never"
            android:title="@string/deobfuscate" />
    </group>

    <group>
        <item android:id="@+id/menu_change_credential"
            android:icon="@drawable/ic_baseline_edit_24"
            app:showAsAction="never"
            android:title="@string/change" />
        <item android:id="@+id/menu_delete_credential"
            android:icon="@drawable/ic_baseline_delete_24"
            app:showAsAction="never"
            android:title="@string/delete" />
        <item android:id="@+id/menu_export_credential"
            android:icon="@drawable/ic_baseline_qr_code_24_white"
            app:showAsAction="never"
            android:title="@string/action_export" />
    </group>

    <group>
        <item android:id="@+id/menu_details"
            app:showAsAction="never"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/details" />
        <item android:id="@+id/menu_password_strength"
            app:showAsAction="never"
            android:icon="@drawable/ic_baseline_fitness_center_24"
            android:title="@string/password_strength" />
    </group>

</menu>
