<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.jepfa.yapm.ui.login.LoginActivity">

    <item
        android:id="@+id/action_login_help"
        android:icon="@drawable/ic_baseline_help_outline_24_white"
        app:showAsAction="always"
        android:title="@string/login_help">
    </item>

    <item
        android:id="@+id/action_revoke_quick_access"
        android:icon="@drawable/baseline_accessibility_24"
        app:showAsAction="never"
        android:title="@string/revoke_quick_access"
        android:visible="false">
    </item>

    <item
        android:id="@+id/action_reset_vault"
        android:icon="@drawable/ic_baseline_replay_24"
        app:showAsAction="never"
        android:title="@string/reset_vault">
    </item>

    <item
        android:id="@+id/menu_intro"
        app:showAsAction="never"
        android:icon="@drawable/ic_keywithqrcode_normal"
        android:title="@string/intro">
    </item>

    <item
        android:id="@+id/menu_whats_new"
        android:icon="@drawable/round_fiber_new_24"
        app:showAsAction="never"
        android:title="@string/whats_new">
    </item>

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="never"
        android:title="@string/about">
    </item>

    <item
        android:id="@+id/menu_debug"
        android:icon="@drawable/ic_baseline_memory_24"
        android:orderInCategory="300"
        android:title="@string/debug"
        android:visible="false">
    </item>


    <item
        android:id="@+id/menu_resume_autofill"
        android:orderInCategory="1000"
        android:title="@string/resume_paused_autofill"
        android:visible="false">
    </item>

</menu>