<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.jepfa.yapm.ui.credential.ListCredentialsActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search">
    </item>

    <item
        android:id="@+id/menu_lock_items"
        android:icon="@drawable/ic_lock_outline_white_24dp"
        android:title="@string/lock_items"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/logout"
        app:showAsAction="always">
    </item>

    <item android:title="@string/quick_access" >
        <menu >
            <item
                android:id="@+id/generate_encrypted_masterpasswd"
                android:orderInCategory="50"
                android:title="@string/generate_encrypted_masterpasswd"
                app:showAsAction="never" />
            <item
                android:id="@+id/delete_stored_masterpasswd"
                android:orderInCategory="70"
                android:title="@string/delete_stored_masterpasswd"
                app:showAsAction="never" />

        </menu>
    </item>

    <item android:title="@string/export" >
        <menu >
            <item
                android:id="@+id/export_plain_masterpasswd"
                android:orderInCategory="10"
                android:title="@string/export_masterpasswd"
                app:showAsAction="never" />
            <item
                android:id="@+id/export_masterkey"
                android:orderInCategory="20"
                android:title="@string/export_masterkey"
                app:showAsAction="never" />
            <item
                android:id="@+id/export_vault"
                android:orderInCategory="50"
                android:title="@string/export_vault"
                app:showAsAction="never" />
        </menu>
    </item>

    <!--TODO move this to settings page later-->
    <item
        android:id="@+id/drop_vault"
        android:orderInCategory="100"
        android:title="@string/drop_vault"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>