<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="de.jepfa.yapm.ui.settings.SettingsActivity$GeneralSettingsFragment"
        app:icon="@drawable/ic_settings_black_24dp"
        app:key="general_header"
        app:title="@string/pref_header_general" />


    <Preference
        app:fragment="de.jepfa.yapm.ui.settings.SettingsActivity$LoginSettingsFragment"
        app:icon="@drawable/ic_baseline_login_24"
        app:key="login_header"
        app:title="@string/pref_header_login" />

    <Preference
        app:fragment="de.jepfa.yapm.ui.settings.SettingsActivity$SecuritySettingsFragment"
        app:icon="@drawable/ic_security_black_24dp"
        app:key="security_header"
        app:title="@string/pref_header_security" />

    <Preference
        app:fragment="de.jepfa.yapm.ui.settings.SettingsActivity$PasswordGeneratorSettingsFragment"
        app:icon="@drawable/ic_baseline_vpn_key_24"
        app:key="passwd_generator_header"
        app:title="@string/pref_header_passwd" />

    <Preference
        app:fragment="de.jepfa.yapm.ui.settings.SettingsActivity$OverlaySettingsFragment"
        app:icon="@drawable/ic_baseline_north_east_24"
        app:key="overlay_header"
        app:title="@string/pref_header_overlay" />

    <Preference
        app:fragment="de.jepfa.yapm.ui.settings.SettingsActivity$ClipboardSettingsFragment"
        app:icon="@drawable/ic_baseline_content_copy_24"
        app:key="clipboard_header"
        app:title="@string/pref_header_clipboard" />

    <Preference
        app:fragment="de.jepfa.yapm.ui.settings.SettingsActivity$AutofillSettingsFragment"
        app:icon="@drawable/ic_baseline_auto_awesome_24"
        app:key="autofill_header"
        app:title="@string/pref_header_autofill" />

    <Preference
        app:fragment="de.jepfa.yapm.ui.settings.SettingsActivity$ReminderSettingsFragment"
        app:icon="@drawable/ic_baseline_replay_24"
        app:key="reminder_header"
        app:title="@string/pref_header_reminder" />

</PreferenceScreen>