<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_configure_otp"
        android:icon="@drawable/otp_24_white"
        app:showAsAction="always"
        android:title="@string/detach" />
    <item android:id="@+id/menu_detach_credential"
        android:icon="@drawable/ic_baseline_north_east_24_white"
        app:showAsAction="always"
        android:title="@string/detach" />
    <item android:id="@+id/menu_copy_credential"
        android:icon="@drawable/ic_baseline_content_copy_24_white"
        app:showAsAction="ifRoom"
        android:title="@string/copy_password_to_clipboard" />
    <item android:id="@+id/menu_restore_last_password"
        app:showAsAction="never"
        android:title="@string/restore_last_password" />
    <item android:id="@+id/menu_preserve_last_password"
        android:checkable="true"
        app:showAsAction="never"
        android:title="@string/preserve_last_password" />
    <item android:id="@+id/menu_deobfuscate_password"
        android:checkable="true"
        android:title="@string/deobfuscate" />
    <item android:id="@+id/menu_obfuscate_password"
        android:checkable="true"
        android:title="@string/obfuscate_while_saving" />

</menu>
