<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="2"
        app:entries="@array/lock_timeout_entries"
        app:entryValues="@array/lock_timeout_values"
        app:key="YAPM/pref:lock_timeout"
        app:title="@string/lock_timeout_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="10"
        app:entries="@array/logout_timeout_entries"
        app:entryValues="@array/logout_timeout_values"
        app:key="YAPM/pref:logout_timeout"
        app:title="@string/logout_timeout_title"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="YAPM/pref:mask_password"
        app:title="@string/pref_security_mask_password"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:defaultValue="false"/>

    <SwitchPreferenceCompat
        app:key="YAPM/pref:show_export_vault_reminder"
        app:title="@string/show_export_vault_reminder"
        app:summary="@string/summary_show_export_vault_reminder"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:defaultValue="true"/>

    <SwitchPreferenceCompat
        app:key="YAPM/pref:show_export_mk_reminder"
        app:title="@string/show_export_mk_reminder"
        app:summary="@string/summary_show_export_mk_reminder"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:defaultValue="true"/>

</PreferenceScreen>