<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_lock_items"
        android:icon="@drawable/ic_lock_open_white_24dp"
        android:title="@string/lock_items"
        app:showAsAction="always" />
    <item android:id="@+id/menu_detach_credential"
        android:icon="@drawable/ic_baseline_north_east_24_white"
        app:showAsAction="always"
        android:title="@string/detach" />
    <item android:id="@+id/menu_copy_credential"
        android:icon="@drawable/ic_baseline_content_copy_24_white"
        app:showAsAction="always"
        android:title="@string/copy_to_clipboard" />
    <item android:id="@+id/menu_import_credential"
        android:icon="@drawable/ic_baseline_qr_code_24_white"
        android:title="@string/import_title" />
    <item android:id="@+id/menu_deobfuscate_password"
        android:checkable="true"
        android:title="@string/deobfuscate" />
    <item android:id="@+id/menu_details"
        android:title="@string/details" />
</menu>
