<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_detach_credential"
        android:icon="@drawable/ic_baseline_north_east_24_white"
        app:showAsAction="always"
        android:title="@string/detach" />
    <item android:id="@+id/menu_copy_credential"
        android:icon="@drawable/ic_baseline_content_copy_24_white"
        app:showAsAction="always"
        android:title="@string/copy_to_clipboard" />
    <item android:id="@+id/menu_show_as_qrcode"
        android:icon="@drawable/ic_baseline_qr_code_24_white"
        app:showAsAction="ifRoom"
        android:title="@string/show_as_qrcode" />
    <item android:id="@+id/menu_change_credential"
        android:title="@string/change" />
    <item android:id="@+id/menu_delete_credential"
        android:title="@string/delete" />

</menu>
